# ConstrainedHiddenMarkovModel

./: Cargo.toml  LICENSE  README.md  config.yaml
data/: small_test.txt
src/: config.rs  console.rs  constrained_hidden_markov.rs  constraint_parser.rs  hidden_markov.rs  main.rs  time_analysis.rs  utils.rs
src/constraints/: empty_constraint.rs  matches_constraint.rs  mod.rs  multi_constraint.rs  rhymes_with_constraint.rs  starts_with_letter_constraint.rs
time_analysis/: CHiMP_Time_Analysis.ipynb  MarkovRunningTimes.csv  MarkovRunningTimesLengths.csv
