[package]
name = "constrained_hmm"
version = "0.1.0"
authors = ["po-gl <porterglines@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
ttaw = "0.3.0"
#rhyme = "0.1.1" # possible alternative to ttaw
